; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/win32/msvcrt/fileio/extr__tfileio.c_test_console_putch.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/win32/msvcrt/fileio/extr__tfileio.c_test_console_putch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @test_console_putch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_console_putch() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %2 = call i32 @_putch(i8 signext 49)
  %3 = call i32 @_putch(i8 signext 64)
  %4 = call i32 @_putch(i8 signext 51)
  %5 = call i32 @_putch(i8 signext 58)
  %6 = call i32 @_putch(i8 signext 10)
  %7 = call i32 @_putch(i8 signext 97)
  %8 = call i32 @_putch(i8 signext 66)
  %9 = call i32 @_putch(i8 signext 99)
  %10 = call i32 @_putch(i8 signext 58)
  %11 = call i32 @_putch(i8 signext 10)
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @_putch(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
